--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "ag-grid-community": "^23.0.2",
     "ag-grid-react": "^23.0.3",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
